# k-nu

./: .gitignore  Cargo.toml  KANU_UNIFIED_ARCHITECTURE.md  QUICK_TRAIN.md  README.md  kanu_cli.py  pyproject.toml
configs/: default_constraints.json  materials_db.json  propellants_db.json
examples/: rocket_engine.json
kanu_intelligence/: README.md  __init__.py  chat_interface.py  conversational_layer.py  failure_analysis.py  intelligence_orchestrator.py  multi_design_system.py  rd_workflow.py
kanu_llm_prototype/: README.md  __init__.py  requirements.txt  run_inference.py  train_kanu.py
kanu_llm_prototype/dashboard/: app.py
kanu_llm_prototype/datasets/: engineering_dataset.json  engineering_dataset_massive.json  generate_massive_dataset.py
kanu_llm_prototype/inference/: kanu_inference.py
kanu_llm_prototype/model/: kanu_architecture.py
kanu_llm_prototype/training/: trainer.py
kanu_unified/: README.md  requirements.txt
kanu_unified/core/: resource_manager.py  unified_orchestrator.py
kanu_unified/dashboard/: unified_dashboard.py
kanu_unified/dashboard_local/: FEATURES.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  app.py  requirements.txt
kanu_unified/dashboard_local/templates/: index.html
kanu_unified/training/: intensive_trainer.py
kanu_v2/: README.md  __init__.py  kanu_v2_orchestrator.py
kanu_v2/agents/: collaborative_agents.py
kanu_v2/mini_llm/: __init__.py  transformer.py
kanu_v2/workflow/: ten_step_workflow.py
kanu_v2/world_model/: simulation_v2.py
rust_core/kanu_evolve/: Cargo.toml
rust_core/kanu_evolve/src/: lib.rs  nsga2.rs  objectives.rs  population.rs
rust_core/kanu_forge/: Cargo.toml
rust_core/kanu_forge/src/: generator.rs  lib.rs  mutation.rs  parametric.rs
rust_core/kanu_physics/: Cargo.toml
rust_core/kanu_python/: Cargo.toml
rust_core/kanu_python/src/: lib.rs
rust_core/kanu_world_model/: Cargo.toml
(+11 files in other folders)
