[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kanu_engine"
version = "0.1.0"
description = "KÁNU — Physics-First Generative Engineering AI"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
]

[tool.maturin]
manifest-path = "rust_core/kanu_python/Cargo.toml"
features = ["pyo3/extension-module"]
