[package]
name = "kanu_python"
version.workspace = true
edition.workspace = true

[lib]
name = "kanu_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
kanu_physics = { path = "../kanu_physics" }
kanu_forge = { path = "../kanu_forge" }
kanu_evolve = { path = "../kanu_evolve" }
kanu_world_model = { path = "../kanu_world_model" }
